Adicion de fragmentos
se agrego nuevos fragmentos dentro de miembros para poder tener mas facilidad de uso de informacion.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="menu_salir">Salir</string>
     <string name="Oespecifico">Fomentar la investigación en los alumnos de la Universidad Tecnológica de Panamá, Sede Regional de Chiriquí. Organizar cursos, conferencias, seminarios o cualquier otra actividad que coadyuve al logro de los objetivos propuestos. Implementar convenios de Investigación, Desarrollo e Innovación (I+D+i) con Instituciones y Empresas. Planificar, desarrollar e implementar proyectos de investigación y/o desarrollo con otras universidades, centro de investigación o instituciones.</string>
     <string name="Ogeneral">Promover, apoyar y divulgar la investigación en las áreas de tecnologías computacionales emergentes con el objeto de contribuir al desarrollo de la ciencia y la tecnología de la Universidad Tecnológica de Panamá, tanto a nivel de pregrado como postgrado; estableciendo lazos de cooperación inter-institucional."</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
